--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <img src="img/label.png" alt="title" width="50%" id="label">
 <br>
 <br>
-<img id="startBtn" onclick="restart()" src="img/start.png" width="400">
-<img id="shopBtn" src="img/shop.png" width="400">
+<img id="startBtn" onclick="restart()" src="img/start.png" width="50%">
+<img id="shopBtn" src="img/shop.png" width="50%">
 <br><br><br><br>  
-<img id="project-label" src="img/project label.png" style="opacity: 0.5;" height="40">
+<img id="project-label" src="img/project label.png" style="opacity: 0.5;" height="20">
     
     <div class="menu-coins" style="display: none; opacity: 0;">
       <img src="img/coin.gif" alt="Coin" width="32" height="32">
